<resources>
    <string name="app_name">Big Blue Ocean</string>
    <string name="app_name_caps">BIG  BLUE</string>
    <string name="login_button">Log In</string>
    <string name="register_button">Register</string>
    <string name="create_account_button">Create Account</string>
    <string name="login_title">Welcome to Big Blue Ocean!</string>
    <string name="login_subtitle">Log in now to access all the features Big Blue has to offer!</string>
    <string name="login_email_hint">Email Address</string>
    <string name="login_password_hint">Password</string>
    <string name="login_name_hint">Name</string>
    <string name="login_company_hint">Company Name</string>
    <string name="login_phone_hint">Phone Number</string>
    <string name="login_dialog_description">Please provide your login credentials:</string>
    <string name="register_dialog_description">Upon creation of an account, a verification email will be
                                                sent to the specified email address. Once verified,
                                                the account can be used to log in.</string>
    <string name="forgot_password_dialog_description">Please enter the email address associated with your account.
                                                        Upon submission of this form, an email will be sent to the
                                                        provided address allowing you to reset your password.</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="password_reset_sent">Password reset email has been sent. Proceed to email to reset you password.</string>
    <string name="login_verify_failed">Current account is not verified. Verify account via link sent to specified email address.</string>
    <string name="create_success">Account creation success. Verification email sent to:</string>
    <string name="email_sent">Verification email has been sent. Proceed to email for verification.</string>
    <string name="email_error">Email Address error. Verification Email has not been sent.</string>
    <string name="nonexistent_email">This email address is not linked to a Big Blue Ocean account.
        Please contact Big Blue Ocean to add this email or become a customer.</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="home_menu_signout">Log Out</string>
    <string name="home_menu_help">User Help</string>
    <string name="home_menu_calendar">Moon Calendar</string>
    <string name="news_title">Latest from Big Blue: </string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_help">Help</string>
    <string name="help_body_text">Welcome to the Big Blue Ocean mobile app. In this section, you can
                                  review the application\'s features in order to streamline your
                                  experience.  </string>
    <string name="products_help">Here you can select a type of fish and specify your needs. It will be added to your \"My Order\" tab for review.</string>
    <string name="news_help">Here you can view announcements and news updates presented by Big Blue Ocean.</string>
    <string name="my_order_help">Here you can review, edit, or clear your order.
        Submitting will send it to your salesperson for review. Try adding something from the \"Products\" tab!</string>
    <string name="previous_orders">Past Orders</string>
    <string name="chat_help">This ought to be null</string>
    <string name="region">Region</string>
    <string name="grade">Grade</string>
    <string name="size">Size</string>
    <string name="species">Species</string>
    <string name="quantity_price">Quantity and Price</string>
    <string name="total_lbs">Total lbs.</string>
    <string name="price_per_lb">Price per lb.</string>
    <string name="submit_button">SUBMIT</string>
    <string name="clear_button">CLEAR</string>
    <string name="submission_confirmed">Your salesperson will reach out to you shortly to help you place your order.
        For clarification, this message is NOT a confirmation of an official order.</string>
    <string name="submission_notconfirmed">Something went wrong and your order could not be submitted. Please reach out to Big Blue.</string>
    <string name="dialog_add_button">Add Item</string>
    <string name="dialog_cancel_button">Cancel</string>
    <string name="dialog_confirm_changes">Confirm changes</string>
    <string name="dialog_continue">Continue</string>
    <string name="dialog_delete">Delete this item</string>
    <string name="submit_dialog_title">Confirm Submission</string>
    <string name="submit_dialog_message">By confirming, you will submit your current order list to your salesperson.
                Your order will be reviewed by your salesperson, who will then contact you to place your order officially.</string>
    <string name="clear_dialog_title">Clear current list?</string>
    <string name="clear_dialog_message">By clearing, you will remove all items in your current list. Do you still wish to continue?</string>
    <string name="default_price">$0.00</string>
    <string name="default_quantity">0 lbs.</string>
    <string name="quantity_prompt">Please enter how many pounds of this fish you would like: </string>
    <string name="price_prompt">Please enter your desired price per pound of this fish: </string>
    <string name="Tuna">Tuna H&amp;G Wild-Caught</string>
    <string name="Sword">Sword H&amp;G Wild-Caught</string>
    <string name="Mahi">Mahi H&amp;G Wild-Caught</string>
    <string name="Wahoo">Wahoo H&amp;G Wild-Caught</string>
    <string name="Grouper">Grouper H&amp;G Wild-Caught</string>
    <string name="Salmon">Salmon H&amp;G Wild-Caught</string>
    <string name="order_tag">ORD</string>
    <string name="news_tag">NEWS</string>
</resources>
