<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/register_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:text="@string/register_button"
            android:textColor="@color/colorPrimary"
            android:textSize="28sp"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:fontFamily="@font/avenirnextbold"/>

        <TextView
            android:id="@+id/register_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:text="@string/register_dialog_description"
            android:textSize="18sp"
            android:textAlignment="center"
            android:fontFamily="@font/avenirnextregular"/>

        <EditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="@font/avenirnextregular"
            android:hint="@string/login_email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textCursorDrawable="@drawable/custom_text_cursor"
            android:visibility="visible" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="14dp"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="@font/avenirnextregular"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textCursorDrawable="@drawable/custom_text_cursor"
            android:visibility="visible" />

        <EditText
            android:id="@+id/register_individual_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="14dp"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="@font/avenirnextregular"
            android:hint="@string/login_name_hint"
            android:inputType="text"
            android:maxLines="1"
            android:textCursorDrawable="@drawable/custom_text_cursor"
            android:visibility="visible" />

        <EditText
            android:id="@+id/register_company_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="14dp"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="@font/avenirnextregular"
            android:hint="@string/login_company_hint"
            android:inputType="text"
            android:maxLines="1"
            android:textCursorDrawable="@drawable/custom_text_cursor"
            android:visibility="visible" />

        <EditText
            android:id="@+id/register_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="14dp"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="@font/avenirnextregular"
            android:hint="@string/login_phone_hint"
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:maxLines="1"
            android:maxLength="10"
            android:textCursorDrawable="@drawable/custom_text_cursor"
            android:visibility="visible" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp"
            android:text="@string/register_button"
            android:fontFamily="@font/avenirnextbold"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:background="@drawable/rounded_button_background_primary"
            android:textColor="@color/white"
            android:textSize="20sp"/>
    </LinearLayout>
</ScrollView>