<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/order_help_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="18dp"
        android:textColor="@color/black_overlay"
        android:text="@string/my_order_help"
        android:textAlignment="center"
        android:textSize="28sp"/>

    <Button
        android:id="@+id/order_previous"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="40dp"
        android:background="@color/colorPrimary"
        android:text="@string/previous_orders"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:fontFamily="@font/impact"
        android:padding="8dp"/>

    <android.support.v7.widget.RecyclerView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/list"
        android:name="com.bigblueocean.nick.bigblueocean.OrderFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        app:layoutManager="LinearLayoutManager"
        tools:context="com.bigblueocean.nick.bigblueocean.fragments.ProdFragment"
        tools:listitem="@layout/fragment_order" >
    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/order_clear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/clear_button"
            android:background="#CCC"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="34sp"
            android:fontFamily="@font/impact"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/order_submit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:text="@string/submit_button"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="34sp"
            android:fontFamily="@font/impact"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>


