<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/forgot_password_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:text="@string/forgot_password"
            android:textColor="@color/colorPrimary"
            android:textSize="28sp"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:fontFamily="@font/avenirnextbold" />

        <TextView
            android:id="@+id/forgot_password_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:text="@string/forgot_password_dialog_description"
            android:textSize="18sp"
            android:textAlignment="center"
            android:fontFamily="@font/avenirnextregular"/>


        <EditText
            android:id="@+id/email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="@font/avenirnextregular"
            android:hint="@string/login_email_hint"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textCursorDrawable="@drawable/custom_text_cursor"
            android:visibility="visible" />

        <Button
            android:id="@+id/forgot_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="44dp"
            android:text="@string/submit_button"
            android:textSize="20sp"
            android:fontFamily="@font/avenirnextbold"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:background="@drawable/rounded_button_background_primary"
            android:textColor="@color/white" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>