<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">


        <TextView
            android:id="@+id/forgot_password_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/forgot_password"
            android:textColor="@color/colorPrimary"
            android:textSize="34sp"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:fontFamily="@font/antonregular" />

        <TextView
            android:id="@+id/forgot_password_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/forgot_password_dialog_description"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/emailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="sans-serif-smallcaps"
            android:hint="@string/login_email_hint"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textCursorDrawable="@drawable/custom_text_cursor"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:background="@color/white">

            <Button
                android:id="@+id/dialog_negative"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/dialog_cancel_button"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:background="@color/white"/>


            <Button
                android:id="@+id/dialog_positive"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="Submit"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:background="@color/white"/>
        </LinearLayout>

    </LinearLayout>



</android.support.constraint.ConstraintLayout>