<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    android:layout_gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/dialog_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/tuna"/>

    <LinearLayout
        android:id="@+id/dialog_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6">

            <in.goodiebag.carouselpicker.CarouselPicker
                android:id="@+id/dialog_main_carousel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                app:items_visible="three"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical">

        <in.goodiebag.carouselpicker.CarouselPicker
            android:id="@+id/dialog_sub_carousel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            app:items_visible="three"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialog_main_carousel"/>

            <TextView
                android:id="@+id/dialog_info_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:text="PLACEHOLDER"
                android:textSize="16sp"
                android:textAlignment="center"/>

    </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">

        <EditText
            android:id="@+id/dialog_edit_text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/black_overlay"
            android:maxLines="1"
            android:maxLength="5"
            android:inputType="numberDecimal"
            android:imeOptions="actionDone"
            android:hint="@string/default_price"
            android:textSize="38sp"
            android:textAlignment="center"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/dialog_edit_text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/black_overlay"
            android:maxLines="1"
            android:maxLength="5"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:hint="@string/default_quantity"
            android:textSize="40sp"
            android:textAlignment="center"
            android:textStyle="bold"/>
        </RelativeLayout>

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white">

        <Button
            android:id="@+id/dialog_cancel_button"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/dialog_cancel_button"
            android:textAlignment="center"
            android:textColor="@color/tuna"
            android:background="@color/white"/>


        <Button
            android:id="@+id/dialog_add_button"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/dialog_add_button"
            android:textAlignment="center"
            android:textColor="@color/tuna"
            android:background="@color/white"/>


    </LinearLayout>

</LinearLayout>
